tests/invalid/generated_binop_mul_bytes_bytearray/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: bytes = b"hello"
    y: bytearray = bytearray(b"hello")
    z = x * y
